2007-11-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-14-06
	* ConfigurationModifier.insertDaqSource(): disregard if the
	configuration has already a DaqSource defined!

2007-11-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-14-05
	* one more bugfix, to confdb.data.ModifierInstructions

2007-11-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-14-04
	* OnlineConverter ctor without arguments (based on 'properties')
	* make default stream in case no streams are defined
	* bugfix to OnlineConverter

2007-11-07  Philipp SCHIEFERDECKER <philipp.schieferdecker@cern.ch>

	* tag V00-14-03
	* parser: fix ShmStreamConsumer parameter list (JH)
	* add missing features to OnlineConverter
	* fixes to gui
	* fixes to MySQL schema (procedures)

2007-11-06  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-14-02
	* converter: add ConverterBase, OnlineConverter, OfflineConverter
	* data: add ModifierInstructions and base ConfigurationModifier on
	it
	* two important bug fixes to the MySQL schema (procedures)
	 
2007-11-02  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-14-01
	* parser: account for subsystems and packages in AddProblem*
	scripts
	* confdb/parser: account for new format of problems.txt including
	subsystem and package for each template
	* confdb/converter: quick fix to account for es_prefer
	* confdb.migrator: account for es_prefer

2007-11-01  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-14-00
	* sql: add tables SoftwareSubsystems/SoftwarePackages, and a new
	foreign key 'packageId' to all *Templates tables. Propagate to
	stored procedures.
	* parser: fill the above tables accordingly for both MySQL and
	Oracle (Jonathan)
	* confdb/data: account for subsystems and packages in
	SoftwareRelease
	* confdb/gui: allow the user to browse the current release and all
	templates. So far, only subsystem/package/template is shown in the